[gd_scene load_steps=22 format=3 uid="uid://bcmjphuomhe6h"]

[ext_resource type="Script" path="res://scenes/battle/battle.gd" id="1_2edvm"]
[ext_resource type="Script" path="res://scenes/ui/hand.gd" id="2_lcvwo"]
[ext_resource type="AudioStream" uid="uid://bhs3phxa51p3w" path="res://art/original_art/8_bit_iced_village_lofi.mp3" id="3_3iuh0"]
[ext_resource type="PackedScene" uid="uid://djhsxq1phowkp" path="res://scenes/player/player.tscn" id="3_4tia0"]
[ext_resource type="PackedScene" uid="uid://cmbgumsmqa86g" path="res://scenes/card_target_selector/card_target_selector.tscn" id="3_xnl3n"]
[ext_resource type="Script" path="res://scenes/enemy/enemy_handler.gd" id="4_b44c5"]
[ext_resource type="Resource" uid="uid://wc6gu505m3i2" path="res://characters/warrior/warrior.tres" id="4_ni5ra"]
[ext_resource type="Script" path="res://scenes/player/player_handler.gd" id="8_60ljq"]
[ext_resource type="Script" path="res://scenes/ui/battle_ui.gd" id="10_2nn4b"]
[ext_resource type="Script" path="res://scenes/battle/phase_handler.gd" id="10_myi75"]
[ext_resource type="Script" path="res://scenes/battle/enemy_spawner.gd" id="10_re72a"]
[ext_resource type="PackedScene" uid="uid://buqnqtiff8xqx" path="res://scenes/ui/mana_ui.tscn" id="11_emvk8"]
[ext_resource type="PackedScene" uid="uid://c3pwji2525lua" path="res://scenes/ui/card_tooltip.tscn" id="12_c3hnr"]
[ext_resource type="Script" path="res://scenes/ui/red_flash.gd" id="15_1pofa"]
[ext_resource type="Theme" uid="uid://c3vkkkcd77aua" path="res://scenes/main_theme.tres" id="15_5feck"]
[ext_resource type="Script" path="res://scenes/battle/wave_ui.gd" id="15_h1yqg"]
[ext_resource type="PackedScene" uid="uid://ctpn4sdlu8mdk" path="res://scenes/ui/card_pile_display.tscn" id="16_ukeni"]
[ext_resource type="PackedScene" uid="uid://cq0vx0kv400cx" path="res://scenes/ui/combat_log/combat_log_ui.tscn" id="17_ff2p0"]
[ext_resource type="PackedScene" uid="uid://rg4pt1re2naq" path="res://scenes/ui/battle_over_panel.tscn" id="17_rhkdk"]
[ext_resource type="PackedScene" uid="uid://dw2irt8ra85pb" path="res://scenes/ui/battle_menu.tscn" id="18_ofb17"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdqmr"]
size = Vector2(320, 137)

[node name="Battle" type="Node2D"]
script = ExtResource("1_2edvm")
char_stats = ExtResource("4_ni5ra")
music = ExtResource("3_3iuh0")

[node name="CardDropArea" type="Area2D" parent="."]
scale = Vector2(2, 2)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
modulate = Color(1, 1, 1, 0.231373)
position = Vector2(160, 68.5)
shape = SubResource("RectangleShape2D_fdqmr")

[node name="EnemyHandler" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_b44c5")

[node name="EnemySpawner" type="Node" parent="."]
script = ExtResource("10_re72a")

[node name="BossMarker" type="Marker2D" parent="EnemySpawner"]
unique_name_in_owner = true
position = Vector2(479.181, 242.715)

[node name="Marker1" type="Marker2D" parent="EnemySpawner"]
position = Vector2(421.966, 159)

[node name="Marker2" type="Marker2D" parent="EnemySpawner"]
position = Vector2(546.511, 160.614)

[node name="Marker3" type="Marker2D" parent="EnemySpawner"]
position = Vector2(366, 242.295)

[node name="Marker4" type="Marker2D" parent="EnemySpawner"]
position = Vector2(602.65, 241.983)

[node name="Player" parent="." instance=ExtResource("3_4tia0")]
position = Vector2(91.3067, 194.164)
scale = Vector2(2, 2)
stats = ExtResource("4_ni5ra")

[node name="CardTargetSelector" parent="." instance=ExtResource("3_xnl3n")]
scale = Vector2(1, 1)

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("hand")]
script = ExtResource("8_60ljq")
hand = NodePath("../BattleUi/Hand")

[node name="PhaseHandler" type="Node" parent="."]
script = ExtResource("10_myi75")

[node name="Map" type="Node2D" parent="."]

[node name="BattleUi" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("10_2nn4b")

[node name="Hand" type="HBoxContainer" parent="BattleUi" node_paths=PackedStringArray("player")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -62.0
offset_right = 150.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
script = ExtResource("2_lcvwo")
player = NodePath("../../Player")

[node name="ManaUi" parent="BattleUi" instance=ExtResource("11_emvk8")]
offset_left = 6.0
offset_top = -73.0
offset_right = 24.0
offset_bottom = -55.0
scale = Vector2(2, 2)
char_stats = ExtResource("4_ni5ra")

[node name="Tooltip" parent="BattleUi" instance=ExtResource("12_c3hnr")]
z_index = 5
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_top = 5.0
offset_right = 20.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EndTurnButton" type="Button" parent="BattleUi"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -95.0
offset_top = -33.0
offset_right = -50.0
offset_bottom = -19.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(2, 2)
text = "End Turn"

[node name="MenuButton" type="Button" parent="BattleUi"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -55.0
offset_top = 5.0
offset_right = -30.0
offset_bottom = 19.0
grow_horizontal = 0
scale = Vector2(2, 2)
text = "Menu
"

[node name="WaveUi" type="Node" parent="BattleUi"]
script = ExtResource("15_h1yqg")

[node name="WaveProgressBar" type="ProgressBar" parent="BattleUi/WaveUi"]
offset_left = 5.0
offset_top = 5.0
offset_right = 49.0
offset_bottom = 15.0
scale = Vector2(2, 2)
theme = ExtResource("15_5feck")
max_value = 5.0
step = 1.0
show_percentage = false

[node name="WaveLabel" type="Label" parent="BattleUi/WaveUi/WaveProgressBar"]
layout_mode = 0
offset_left = 2.46404
offset_top = 2.93759
offset_right = 43.464
offset_bottom = 8.93759
text = "Wave 3/10"

[node name="CardPileDisplay" parent="BattleUi" instance=ExtResource("16_ukeni")]
unique_name_in_owner = true
visible = false

[node name="CombatLogUi" parent="BattleUi" instance=ExtResource("17_ff2p0")]
offset_left = 6.0
offset_top = 34.0
offset_right = 206.0
offset_bottom = 154.0

[node name="HBoxContainer" type="HBoxContainer" parent="BattleUi"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -33.0
offset_right = 75.0
offset_bottom = -18.0
grow_vertical = 0
scale = Vector2(2, 2)

[node name="SeeDrawPileButton" type="Button" parent="BattleUi/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/font_size = 0
text = "Draw"

[node name="SeeDiscardPileButton" type="Button" parent="BattleUi/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
text = "Discard"

[node name="RedFlash" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("15_1pofa")

[node name="ColorRect" type="ColorRect" parent="RedFlash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.443137, 0.443137, 0)

[node name="Timer" type="Timer" parent="RedFlash"]
wait_time = 0.1
one_shot = true

[node name="OverBattleLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="BattleOverPanel" parent="OverBattleLayer" instance=ExtResource("17_rhkdk")]
visible = false

[node name="BattleMenu" parent="." instance=ExtResource("18_ofb17")]
visible = false

[connection signal="value_changed" from="BattleUi/WaveUi/WaveProgressBar" to="BattleUi/WaveUi" method="_on_wave_progress_bar_value_changed"]
